Fix hero button from stretching vertically

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ ul {
 }
 
 .hero button {
+    align-self: flex-start;
     margin: 12px 0;
 }
 
